force-app/main/default/objects/Persona_State__e.object
<CustomObject>
    <fields>
        <fullName>MoID__c</fullName>
        <label>MoID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Persona State</label>
    <pluralLabel>Persona States</pluralLabel>
</CustomObject>